# quick-x

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup_mac.sh  setup_win.bat  xmake.lua
lib/3rd/: CMakeLists.txt
lib/3rd/SDL2/: CMakeLists.txt
lib/3rd/glew/: CMakeLists.txt
lib/3rd/imgui/: CMakeLists.txt
lib/3rd/kazmath/: CMakeLists.txt  aabb.h  mat3.h  mat4.h  mat4stack.c  mat4stack.h  matrix.c  matrix.h  plane.h  quaternion.h  ray2.h  utility.h  vec2.h  vec3.h  vec4.h
lib/3rd/lua_extensions/: CMakeLists.txt  lua_extensions.h
lib/3rd/lua_extensions/socket/: socket_scripts.c
lib/3rd/stb/: stb.c
lib/3rd/tinyxml2/: tinyxml2.h
lib/3rd/zlib/: CMakeLists.txt
lib/cocos2d-x/: CMakeLists.txt
lib/cocos2d-x/actions/: Android.mk  CCAction.cpp  CCAction.h  CCActionCamera.cpp  CCActionCamera.h  CCActionCatmullRom.cpp  CCActionCatmullRom.h  CCActionEase.cpp  CCActionFiniteTime.cpp  CCActionFiniteTime.h  CCActionGrid.cpp  CCActionGrid3D.cpp  CCActionGrid3D.h  CCActionInstant.cpp  CCActionInstant.h  CCActionInterval.cpp  CCActionInterval.h  CCActionManager.cpp  CCActionManager.h  CCActionPageTurn3D.cpp  CCActionPageTurn3D.h  CCActionProgressTimer.cpp  CCActionProgressTimer.h  CCActionTiledGrid.cpp  CCActionTween.h
lib/cocos2d-x/audio/: Android.mk  SimpleAudioEngine.h
lib/cocos2d-x/audio/android/: Android.mk  SimpleAudioEngine.cpp  SimpleAudioEngineJni.cpp
lib/cocos2d-x/audio/ios/: SimpleAudioEngine.mm  SimpleAudioEngine_objc.h  SimpleAudioEngine_objc.m
lib/cocos2d-x/audio/mac/: SimpleAudioEngine.mm
lib/cocos2d-x/audio/win32/: MciPlayer.cpp  MciPlayer.h  SimpleAudioEngine.cpp
lib/cocos2d-x/cocos/: Android.mk  LinkedList.h  MathDefs.h  RefCounted.h  Variant.cpp  Variant.h
lib/cocos2d-x/cocos2dx/: Android.mk  CCConfiguration.cpp  CCDirector.cpp  CCDirector.h  ccMacros.h  cocos2d.h
lib/cocos2d-x/cocos2dx/IO/: FileSystem.cpp  FileSystem.h
lib/cocos2d-x/cocos2dx/actions/: CCAction.cpp  CCAction.h  CCActionCamera.cpp  CCActionCatmullRom.h  CCActionEase.h  CCActionFiniteTime.cpp  CCActionFiniteTime.h  CCActionGrid.cpp  CCActionGrid.h  CCActionGrid3D.h  CCActionInstant.cpp  CCActionInstant.h  CCActionInterval.cpp  CCActionInterval.h  CCActionManager.h  CCActionPageTurn3D.cpp  CCActionProgressTimer.cpp  CCActionTiledGrid.h
lib/cocos2d-x/cocos2dx/base/: ID.cpp  ProcessUtils.cpp  ProcessUtils.h
lib/cocos2d-x/cocos2dx/base_nodes/: CCAtlasNode.cpp  CCAtlasNode.h
lib/cocos2d-x/cocos2dx/cocoa/: CCArray.cpp  CCArray.h  CCDataVisitor.cpp  CCDataVisitor.h  CCDictionary.cpp  CCDictionary.h  CCObject.cpp  CCObject.h  CCPointArray.cpp  CCPointArray.h  CCString.cpp  CCString.h
lib/cocos2d-x/cocos2dx/crypto/: CCCrypto.cpp  CCCrypto.h
lib/cocos2d-x/cocos2dx/draw_nodes/: CCDrawNode.cpp
lib/cocos2d-x/cocos2dx/effects/: CCGrid.cpp
lib/cocos2d-x/cocos2dx/include/: cocos2d.h
lib/cocos2d-x/cocos2dx/label_nodes/: CCLabelAtlas.cpp  CCLabelAtlas.h  CCLabelBMFont.cpp
lib/cocos2d-x/cocos2dx/layers_scenes_transitions_nodes/: CCLayer.h  CCTransition.cpp  CCTransitionPageTurn.cpp  CCTransitionProgress.cpp
lib/cocos2d-x/cocos2dx/misc_nodes/: CCClippingNode.cpp  CCRenderTexture.cpp
lib/cocos2d-x/cocos2dx/particle_nodes/: CCParticleBatchNode.cpp  CCParticleSystem.h  CCParticleSystemQuad.cpp
lib/cocos2d-x/cocos2dx/platform/: CCApplicationProtocol.h  CCDevice.cpp  CCDevice.h  CCDevice_android.cpp  CCDevice_mac.mm  CCDevice_win32.cpp  CCEGLViewProtocol.cpp  CCFileUtils.cpp  CCFileUtils.h  CCImageCommonWebp.cpp  CCImageCommon_cpp.h  CCPlatformMacros.h  CCSAXParser.cpp  CCStdC.h  platform.cpp
lib/cocos2d-x/core/: Android.mk  CCCamera.cpp  CCCamera.h  CCConfiguration.cpp  CCConfiguration.h  CCDirector.cpp  CCDirector.h  CCScheduler.cpp  CCScheduler.h  SubSystem.h  ccConfig.h  ccMacros.h  cocos2d.h
lib/cocos2d-x/core/base/: ID.h  (+6 more)
lib/cocos2d-x/crypto/: md5.cpp
lib/cocos2d-x/extensions/: Android.mk
lib/cocos2d-x/imgui/: ImGuiDock.cpp  ImGuiDock.h  NoUI.cpp  NoUI.h  PlayerModule.cpp  PlayerModule.h  PlayerUI.cpp  PlayerUI.h  imgui_binding.cpp  imgui_cocos2dx.cpp  imgui_cocos2dx.h
lib/cocos2d-x/misc/: CCUserDefault.cpp
lib/cocos2d-x/native/: Android.mk  CCNative.h  build.bat  build.sh
lib/cocos2d-x/network/: Android.mk  CCHTTPRequest.cpp  CCHTTPRequest.h  CCHTTPRequestAndroid.cpp  CCHTTPRequestDelegate.h  CCNetwork.cpp  CCNetwork.h  CCNetworkAndroid.cpp  CCNetworkEvents.h  CCNetworkIOSMac.mm  CCNetworkWin32.cpp  cocos2dx_httprequest_luabinding.cpp  cocos2dx_httprequest_luabinding.tolua
lib/cocos2d-x/particle/: Android.mk  CCParticleBatchNode.cpp  CCParticleBatchNode.h  CCParticleExamples.cpp  CCParticleSystem.cpp  CCParticleSystem.h  CCParticleSystemQuad.cpp  CCParticleSystemQuad.h
lib/cocos2d-x/scripting/: Android.mk  CCLuaBridge.cpp  CCLuaBridge.h  CCLuaBridge_java.cpp  CCLuaBridge_oc.mm  CCLuaEngine.cpp  CCLuaEngine.h  CCLuaStack.cpp  CCLuaStack.h  CCLuaValue.cpp  CCLuaValue.h  Cocos2dxLuaLoader.cpp  Cocos2dxLuaLoader.h  LuaCocoStudio.cpp  LuaCocos2d.cpp  LuaEvent.cpp  LuaEvent.h  LuaFunction.cpp  LuaFunction.h  LuaTable.cpp  LuaTable.h  lua_cocos2dx_cocostudio_manual.cpp  lua_cocos2dx_cocostudio_manual.h  lua_cocos2dx_manual.cpp
lib/cocos2d-x/spine/: Android.mk  PolygonBatch.cpp  PolygonBatch.h  SkeletonAnimation.cpp  SkeletonAnimation.h  SpineEvents.h  SpineResource.cpp  SpineResource.h  spine-cocos2dx.cpp  spine-cocos2dx.h  spine_luabinding.cpp
lib/cocos2d-x/tilemap/: Android.mk  CCParallaxNode.h  CCTMXLayer.cpp  CCTMXLayer.h  CCTMXObjectGroup.h  CCTMXTiledMap.cpp  CCTMXTiledMap.h  CCTMXXMLParser.cpp  CCTMXXMLParser.h  CCTileMapAtlas.cpp  CCTileMapAtlas.h  TGAlib.cpp
lib/cocos2d-x/ui/: Android.mk  CocosGUI.cpp  CocosGUI.h  GUIDefine.h  UIButton.cpp  UIButton.h  UICheckBox.cpp  UICheckBox.h  UIImageView.cpp  UIImageView.h  UILabel.cpp  UILabel.h  UILabelAtlas.cpp  UILabelAtlas.h  UILabelBMFont.cpp  UILabelBMFont.h  UILoadingBar.cpp  UILoadingBar.h  UIRichText.cpp  UIRichText.h  UISlider.cpp  UISlider.h  UITextField.cpp  UITextField.h  UITouchGroup.cpp  UITouchGroup.h  UIWidget.cpp  UIWidget.h
lib/cocos2d-x/zip/: CCZipFile.h  ZipUtils.cpp  ioapi.h
(+727 files in other folders)
