cmake_minimum_required(VERSION 3.4.1)

set(CWD ${CMAKE_CURRENT_LIST_DIR})

project(QuickX)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

link_directories(
	${CWD}/lib/third_party/android/prebuilt/libcurl/libs/armeabi/
	${CWD}/lib/third_party/android/prebuilt/libjpeg/libs/armeabi/
	${CWD}/lib/third_party/android/prebuilt/libpng/libs/armeabi/
	${CWD}/lib/third_party/android/prebuilt/libwebp/libs/armeabi/
	${CWD}/lib/third_party/android/prebuilt/zlib/libs/armeabi/
)


include_directories(
	${CWD}/lib/cocos2d-x
	${CWD}/lib/cocos2d-x/core
	${CWD}/lib/cocos2d-x/spine
	${CWD}/lib/cocos2d-x/core/kazmath/include
	${CWD}/lib/cocos2d-x/core/platform
	${CWD}/lib/cocos2d-x/scripting
	${CWD}/lib/cocos2d-x/scripting/lua
	${CWD}/lib/cocos2d-x/scripting/tolua
	${CWD}/lib/third_party/android/prebuilt/SDL2/include
	${CWD}/lib/third_party/android/prebuilt/libcurl/include
	${CWD}/lib/third_party/android/prebuilt/libjpeg/include
	${CWD}/lib/third_party/android/prebuilt/libpng/include
	${CWD}/lib/third_party/android/prebuilt/libwebp/include
	${CWD}/lib/third_party/android/prebuilt/zlib/include
)

set(QUICKX_SOURCES 
	${CWD}/lib/cocos2d-x/actions/CCAction.cpp	
	${CWD}/lib/cocos2d-x/actions/CCActionCamera.cpp	
	${CWD}/lib/cocos2d-x/actions/CCActionCatmullRom.cpp	
	${CWD}/lib/cocos2d-x/actions/CCActionEase.cpp	
	${CWD}/lib/cocos2d-x/actions/CCActionFiniteTime.cpp	
	${CWD}/lib/cocos2d-x/actions/CCActionInstant.cpp	
	${CWD}/lib/cocos2d-x/actions/CCActionInterval.cpp	
	${CWD}/lib/cocos2d-x/actions/CCActionManager.cpp	
	${CWD}/lib/cocos2d-x/actions/CCActionProgressTimer.cpp	
	${CWD}/lib/cocos2d-x/actions/CCActionTween.cpp	
	${CWD}/lib/cocos2d-x/audio/android/SimpleAudioEngine.cpp	
	${CWD}/lib/cocos2d-x/audio/android/SimpleAudioEngineJni.cpp	
	${CWD}/lib/cocos2d-x/core/CCCamera.cpp	
	${CWD}/lib/cocos2d-x/core/CCConfiguration.cpp	
	${CWD}/lib/cocos2d-x/core/CCScheduler.cpp	
	${CWD}/lib/cocos2d-x/core/base/ID.cpp	
	${CWD}/lib/cocos2d-x/core/base/MathDefs.cpp	
	${CWD}/lib/cocos2d-x/core/base/ProcessUtils.cpp	
	${CWD}/lib/cocos2d-x/core/base/RefCounted.cpp	
	${CWD}/lib/cocos2d-x/core/base/Variant.cpp	
	${CWD}/lib/cocos2d-x/core/cocoa/CCAffineTransform.cpp	
	${CWD}/lib/cocos2d-x/core/cocoa/CCArray.cpp	
	${CWD}/lib/cocos2d-x/core/cocoa/CCAutoreleasePool.cpp	
	${CWD}/lib/cocos2d-x/core/cocoa/CCDictionary.cpp	
	${CWD}/lib/cocos2d-x/core/cocoa/CCGeometry.cpp	
	${CWD}/lib/cocos2d-x/core/cocoa/CCScriptEventDispatcher.cpp	
	${CWD}/lib/cocos2d-x/core/cocoa/CCScriptSupport.cpp	
	${CWD}/lib/cocos2d-x/core/cocoa/CCSet.cpp	
	${CWD}/lib/cocos2d-x/core/cocoa/CCString.cpp	
	${CWD}/lib/cocos2d-x/core/engine/CCAttributeAccessor.cpp	
	${CWD}/lib/cocos2d-x/core/engine/CCDebugHud.cpp	
	${CWD}/lib/cocos2d-x/core/engine/CCDirector.cpp	
	${CWD}/lib/cocos2d-x/core/engine/CCEngineEvents.cpp	
	${CWD}/lib/cocos2d-x/core/engine/CCFileSystem.cpp	
	${CWD}/lib/cocos2d-x/core/engine/CCObject.cpp	
	${CWD}/lib/cocos2d-x/core/engine/CCProfiling.cpp	
	${CWD}/lib/cocos2d-x/core/engine/CCResourceCache.cpp	
	${CWD}/lib/cocos2d-x/core/engine/CCSubSystem.cpp	
	${CWD}/lib/cocos2d-x/core/graphics/CCColor.cpp	
	${CWD}/lib/cocos2d-x/core/graphics/CCRendererBatcher.cpp	
	${CWD}/lib/cocos2d-x/core/graphics/CCVec2.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCAtlasNode.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCClippingNode.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCClippingRegionNode.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCDrawNode.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCDrawingPrimitives.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCLabelAtlas.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCLabelBMFont.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCLabelTTF.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCLayer.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCNode.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCProgressTimer.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCRenderTexture.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCScale9Sprite.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCScene.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCShapeNode.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCSprite.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCSpriteBatchNode.cpp	
	${CWD}/lib/cocos2d-x/core/nodes/CCTextFieldTTF.cpp	
	${CWD}/lib/cocos2d-x/core/platform/CCDevice.cpp	
	${CWD}/lib/cocos2d-x/core/platform/CCEGLView.cpp	
	${CWD}/lib/cocos2d-x/core/platform/CCInput.cpp	
	${CWD}/lib/cocos2d-x/core/platform/CCSAXParser.cpp	
	${CWD}/lib/cocos2d-x/core/platform/CCTimer.cpp	
	${CWD}/lib/cocos2d-x/core/platform/android/CCDeviceAndroid.cpp	
	${CWD}/lib/cocos2d-x/core/platform/android/CCImage.cpp	
	${CWD}/lib/cocos2d-x/core/platform/android/jni/IMEJni.cpp	
	${CWD}/lib/cocos2d-x/core/platform/android/jni/Java_org_cocos2dx_lib_Cocos2dxBitmap.cpp	
	${CWD}/lib/cocos2d-x/core/platform/android/jni/Java_org_cocos2dx_lib_Cocos2dxHelper.cpp	
	${CWD}/lib/cocos2d-x/core/platform/android/jni/Java_org_cocos2dx_lib_Cocos2dxRenderer.cpp	
	${CWD}/lib/cocos2d-x/core/platform/android/jni/JniHelper.cpp	
	${CWD}/lib/cocos2d-x/core/platform/android/jni/TouchesJni.cpp	
	${CWD}/lib/cocos2d-x/core/resources/CCAnimation.cpp	
	${CWD}/lib/cocos2d-x/core/resources/CCPlistResource.cpp	
	${CWD}/lib/cocos2d-x/core/resources/CCSpriteFrame.cpp	
	${CWD}/lib/cocos2d-x/core/shaders/CCGLProgram.cpp	
	${CWD}/lib/cocos2d-x/core/shaders/CCRenderState.cpp	
	${CWD}/lib/cocos2d-x/core/shaders/CCShaderCache.cpp	
	${CWD}/lib/cocos2d-x/core/shaders/ccGLStateCache.cpp	
	${CWD}/lib/cocos2d-x/core/support/TransformUtils.cpp	
	${CWD}/lib/cocos2d-x/core/support/ccUTF8.cpp	
	${CWD}/lib/cocos2d-x/core/support/component/CCComponent.cpp	
	${CWD}/lib/cocos2d-x/core/support/component/CCComponentContainer.cpp	
	${CWD}/lib/cocos2d-x/core/support/data_support/ccCArray.cpp	
	${CWD}/lib/cocos2d-x/core/support/image_support/TGAlib.cpp	
	${CWD}/lib/cocos2d-x/core/support/tinyxml2/tinyxml2.cpp	
	${CWD}/lib/cocos2d-x/core/support/user_default/CCUserDefault.cpp	
	${CWD}/lib/cocos2d-x/core/support/user_default/CCUserDefaultAndroid.cpp	
	${CWD}/lib/cocos2d-x/core/text_input_node/CCIMEDispatcher.cpp	
	${CWD}/lib/cocos2d-x/core/textures/CCTexture2D.cpp	
	${CWD}/lib/cocos2d-x/core/textures/CCTextureAtlas.cpp	
	${CWD}/lib/cocos2d-x/core/textures/CCTextureETC.cpp	
	${CWD}/lib/cocos2d-x/core/textures/CCTexturePVR.cpp	
	${CWD}/lib/cocos2d-x/core/touch_dispatcher/CCTouch.cpp	
	${CWD}/lib/cocos2d-x/crypto/CCCrypto.cpp	
	${CWD}/lib/cocos2d-x/crypto/md5.cpp	
	${CWD}/lib/cocos2d-x/network/CCHTTPRequest.cpp	
	${CWD}/lib/cocos2d-x/network/CCNetwork.cpp	
	${CWD}/lib/cocos2d-x/network/CCNetworkAndroid.cpp	
	${CWD}/lib/cocos2d-x/network/cocos2dx_httprequest_luabinding.cpp	
	${CWD}/lib/cocos2d-x/particle/CCParticleBatchNode.cpp	
	${CWD}/lib/cocos2d-x/particle/CCParticleExamples.cpp	
	${CWD}/lib/cocos2d-x/particle/CCParticleSystem.cpp	
	${CWD}/lib/cocos2d-x/particle/CCParticleSystemQuad.cpp	
	${CWD}/lib/cocos2d-x/scripting/CCLuaBridge.cpp	
	${CWD}/lib/cocos2d-x/scripting/CCLuaBridge_java.cpp	
	${CWD}/lib/cocos2d-x/scripting/CCLuaEngine.cpp	
	${CWD}/lib/cocos2d-x/scripting/CCLuaStack.cpp	
	${CWD}/lib/cocos2d-x/scripting/CCLuaValue.cpp	
	${CWD}/lib/cocos2d-x/scripting/LuaCocos2d.cpp	
	${CWD}/lib/cocos2d-x/scripting/LuaFunction.cpp	
	${CWD}/lib/cocos2d-x/scripting/LuaTable.cpp	
	${CWD}/lib/cocos2d-x/scripting/lua_cocos2dx_cocostudio_manual.cpp	
	${CWD}/lib/cocos2d-x/scripting/platform/android/org_cocos2dx_lib_Cocos2dxLuaJavaBridge.cpp	
	${CWD}/lib/cocos2d-x/spine/PolygonBatch.cpp	
	${CWD}/lib/cocos2d-x/spine/SkeletonAnimation.cpp	
	${CWD}/lib/cocos2d-x/spine/SpineResource.cpp	
	${CWD}/lib/cocos2d-x/spine/spine-cocos2dx.cpp	
	${CWD}/lib/cocos2d-x/spine/spine_luabinding.cpp	
	${CWD}/lib/cocos2d-x/tilemap/CCTMXLayer.cpp	
	${CWD}/lib/cocos2d-x/tilemap/CCTMXObjectGroup.cpp	
	${CWD}/lib/cocos2d-x/tilemap/CCTMXTiledMap.cpp	
	${CWD}/lib/cocos2d-x/tilemap/CCTMXXMLParser.cpp	
	${CWD}/lib/cocos2d-x/tilemap/CCTileMapAtlas.cpp	
	${CWD}/lib/cocos2d-x/ui/EditBox/CCEditBoxImplAndroid.cpp	
	${CWD}/lib/cocos2d-x/ui/EditBox/UIEditBox.cpp	
	${CWD}/lib/cocos2d-x/ui/Layouts/UILayout.cpp	
	${CWD}/lib/cocos2d-x/ui/Layouts/UILayoutDefine.cpp	
	${CWD}/lib/cocos2d-x/ui/Layouts/UILayoutParameter.cpp	
	${CWD}/lib/cocos2d-x/ui/ScrollWidget/UIListView.cpp	
	${CWD}/lib/cocos2d-x/ui/ScrollWidget/UIPageView.cpp	
	${CWD}/lib/cocos2d-x/ui/ScrollWidget/UIScrollView.cpp	
	${CWD}/lib/cocos2d-x/ui/UIButton.cpp	
	${CWD}/lib/cocos2d-x/ui/UICheckBox.cpp	
	${CWD}/lib/cocos2d-x/ui/UIImageView.cpp	
	${CWD}/lib/cocos2d-x/ui/UILabel.cpp	
	${CWD}/lib/cocos2d-x/ui/UILabelAtlas.cpp	
	${CWD}/lib/cocos2d-x/ui/UILabelBMFont.cpp	
	${CWD}/lib/cocos2d-x/ui/UILoadingBar.cpp	
	${CWD}/lib/cocos2d-x/ui/UIRichText.cpp	
	${CWD}/lib/cocos2d-x/ui/UISlider.cpp	
	${CWD}/lib/cocos2d-x/ui/UITextField.cpp	
	${CWD}/lib/cocos2d-x/ui/UITouchGroup.cpp	
	${CWD}/lib/cocos2d-x/ui/UIWidget.cpp	
	${CWD}/lib/cocos2d-x/ui/webview/UIWebView.cpp	
	${CWD}/lib/cocos2d-x/ui/webview/UIWebViewImpl-android.cpp	
	${CWD}/lib/cocos2d-x/zip/CCZipFile.cpp	
	${CWD}/lib/cocos2d-x/zip/ZipUtils.cpp	
	${CWD}/lib/cocos2d-x/zip/ioapi.cpp	
	${CWD}/lib/cocos2d-x/zip/ioapi_mem.cpp	
	${CWD}/lib/cocos2d-x/zip/unzip.cpp 
	${CWD}/lib/cocos2d-x/scripting/tolua/tolua_event.c 
	${CWD}/lib/cocos2d-x/scripting/tolua/tolua_is.c 
	${CWD}/lib/cocos2d-x/scripting/tolua/tolua_map.c 
	${CWD}/lib/cocos2d-x/scripting/tolua/tolua_push.c 
	${CWD}/lib/cocos2d-x/scripting/tolua/tolua_to.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/cjson/fpconv.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/cjson/lua_cjson.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/cjson/strbuf.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/zlib/lua_zlib.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/auxiliar.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/luasocket_buffer.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/except.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/inet.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/luasocket_io.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/luasocket.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/mime.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/options.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/select.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/serial.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/socket_scripts.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/tcp.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/timeout.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/udp.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/unix.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/socket/usocket.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/filesystem/lfs.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/lpack/lpack.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/snapshot/snapshot.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/lsqlite3/sqlite3.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/lsqlite3/lsqlite3.c 
	${CWD}/lib/cocos2d-x/scripting/lua_extensions/lua_extensions.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lapi.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lauxlib.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lbaselib.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lcode.c 
	${CWD}/lib/cocos2d-x/scripting/lua/ldblib.c 
	${CWD}/lib/cocos2d-x/scripting/lua/ldebug.c 
	${CWD}/lib/cocos2d-x/scripting/lua/ldo.c 
	${CWD}/lib/cocos2d-x/scripting/lua/ldump.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lfunc.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lgc.c 
	${CWD}/lib/cocos2d-x/scripting/lua/linit.c 
	${CWD}/lib/cocos2d-x/scripting/lua/liolib.c 
	${CWD}/lib/cocos2d-x/scripting/lua/llex.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lmathlib.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lmem.c 
	${CWD}/lib/cocos2d-x/scripting/lua/loadlib.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lobject.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lopcodes.c 
	${CWD}/lib/cocos2d-x/scripting/lua/loslib.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lparser.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lstate.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lstring.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lstrlib.c 
	${CWD}/lib/cocos2d-x/scripting/lua/ltable.c 
	${CWD}/lib/cocos2d-x/scripting/lua/ltablib.c 
	${CWD}/lib/cocos2d-x/scripting/lua/ltm.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lundump.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lvm.c 
	${CWD}/lib/cocos2d-x/scripting/lua/lzio.c 
	${CWD}/lib/cocos2d-x/scripting/lua/print.c 
	${CWD}/lib/cocos2d-x/spine/spine/AnimationState.c   
	${CWD}/lib/cocos2d-x/spine/spine/AnimationStateData.c   
	${CWD}/lib/cocos2d-x/spine/spine/Atlas.c   
	${CWD}/lib/cocos2d-x/spine/spine/AtlasAttachmentLoader.c   
	${CWD}/lib/cocos2d-x/spine/spine/Attachment.c   
	${CWD}/lib/cocos2d-x/spine/spine/AttachmentLoader.c   
	${CWD}/lib/cocos2d-x/spine/spine/Bone.c   
	${CWD}/lib/cocos2d-x/spine/spine/BoneData.c   
	${CWD}/lib/cocos2d-x/spine/spine/BoundingBoxAttachment.c   
	${CWD}/lib/cocos2d-x/spine/spine/Event.c   
	${CWD}/lib/cocos2d-x/spine/spine/EventData.c   
	${CWD}/lib/cocos2d-x/spine/spine/extension.c   
	${CWD}/lib/cocos2d-x/spine/spine/IkConstraint.c   
	${CWD}/lib/cocos2d-x/spine/spine/IkConstraintData.c   
	${CWD}/lib/cocos2d-x/spine/spine/Json.c   
	${CWD}/lib/cocos2d-x/spine/spine/MeshAttachment.c   
	${CWD}/lib/cocos2d-x/spine/spine/RegionAttachment.c   
	${CWD}/lib/cocos2d-x/spine/spine/Skeleton.c   
	${CWD}/lib/cocos2d-x/spine/spine/SkeletonBounds.c   
	${CWD}/lib/cocos2d-x/spine/spine/SkeletonData.c   
	${CWD}/lib/cocos2d-x/spine/spine/SkeletonJson.c   
	${CWD}/lib/cocos2d-x/spine/spine/Skin.c   
	${CWD}/lib/cocos2d-x/spine/spine/SkinnedMeshAttachment.c   
	${CWD}/lib/cocos2d-x/spine/spine/Slot.c   
	${CWD}/lib/cocos2d-x/spine/spine/SlotData.c   
	${CWD}/lib/cocos2d-x/spine/spine/Animation.c   
	${CWD}/lib/cocos2d-x/crypto/libbase64.c   
	${CWD}/lib/cocos2d-x/crypto/xxtea.c   
	${CWD}/lib/cocos2d-x/core/kazmath/src/aabb.c 
	${CWD}/lib/cocos2d-x/core/kazmath/src/mat3.c 
	${CWD}/lib/cocos2d-x/core/kazmath/src/mat4.c 
	${CWD}/lib/cocos2d-x/core/kazmath/src/neon_matrix_impl.c 
	${CWD}/lib/cocos2d-x/core/kazmath/src/plane.c 
	${CWD}/lib/cocos2d-x/core/kazmath/src/quaternion.c 
	${CWD}/lib/cocos2d-x/core/kazmath/src/ray2.c 
	${CWD}/lib/cocos2d-x/core/kazmath/src/utility.c 
	${CWD}/lib/cocos2d-x/core/kazmath/src/vec2.c 
	${CWD}/lib/cocos2d-x/core/kazmath/src/vec3.c 
	${CWD}/lib/cocos2d-x/core/kazmath/src/vec4.c 
	${CWD}/lib/cocos2d-x/core/kazmath/src/GL/mat4stack.c 
	${CWD}/lib/cocos2d-x/core/kazmath/src/GL/matrix.c 
	${CWD}/lib/cocos2d-x/scripting/tolua_fix.c 
	${CWD}/lib/cocos2d-x/core/ccFPSImages.c 
)

add_library(game SHARED template/sources/App.cpp ${QUICKX_SOURCES})

target_link_libraries(
	GLESv2
	log
	android

libcurl
libjpeg
libpng
libwebp
zlib
)